[gd_scene load_steps=31 format=3 uid="uid://bxgg1k0vh82t6"]

[ext_resource type="Texture2D" uid="uid://lrhkprge1nn8" path="res://assets/art/aesprite/device/link_device_base.png" id="1_ex2ea"]
[ext_resource type="Texture2D" uid="uid://b2ax1chp57m8v" path="res://assets/art/aesprite/device/device_skins/default_color_palettes.png" id="1_s3t2l"]
[ext_resource type="Script" uid="uid://cjnlwgkuswi6j" path="res://device/link_device_button_manager.gd" id="2_7pd7f"]
[ext_resource type="Texture2D" uid="uid://2l5xccro1gcr" path="res://assets/art/aesprite/device/audio_button_sheet.png" id="2_ex2ea"]
[ext_resource type="Script" uid="uid://vrs1twpulcy0" path="res://addons/PaletteSwapShader/PaletteMaterial.gd" id="2_pblih"]
[ext_resource type="Resource" uid="uid://dtapvx24yxox1" path="res://data/sound_grouping/button_down.tres" id="3_2t7hj"]
[ext_resource type="Texture2D" uid="uid://dlun3cap2g1bj" path="res://assets/art/aesprite/device/center_button_sheet.png" id="3_7pd7f"]
[ext_resource type="Texture2D" uid="uid://d13q43b0wpj8t" path="res://assets/art/aesprite/device/left_button_sheet.png" id="4_2t7hj"]
[ext_resource type="Resource" uid="uid://d3gy505efe464" path="res://data/sound_grouping/button_up.tres" id="4_gfx1a"]
[ext_resource type="Texture2D" uid="uid://btcrksoaem5g8" path="res://assets/art/aesprite/device/options_button_sheet.png" id="5_gfx1a"]
[ext_resource type="Texture2D" uid="uid://bvyegbhhtqubi" path="res://assets/art/aesprite/device/pet_button_sheet.png" id="6_s3t2l"]
[ext_resource type="Texture2D" uid="uid://cbsfvo3e76li8" path="res://assets/art/aesprite/device/power_button_sheet.png" id="7_pblih"]
[ext_resource type="Texture2D" uid="uid://cwydhgx4hqgxt" path="res://assets/art/aesprite/device/right_button_sheet.png" id="8_xk3an"]
[ext_resource type="Script" uid="uid://3av1qygj3goe" path="res://device/device_button.gd" id="9_oq8df"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s3t2l"]
shader_parameter/color_count = 8
shader_parameter/source = PackedInt32Array(0, 0, 0, 26, 18, 33, 34, 32, 52, 242, 113, 33, 255, 137, 10, 255, 167, 74, 252, 186, 100, 253, 195, 109, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/output = PackedVector3Array(0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.94902, 0.443137, 0.129412, 1, 0.537255, 0.0392157, 1, 0.654902, 0.290196, 0.988235, 0.729412, 0.392157, 0.992157, 0.764706, 0.427451, 0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.713726, 0.0862745, 0.0862745, 0.858824, 0.121569, 0.121569, 1, 0.32549, 0.290196, 1, 0.447059, 0.419608, 1, 0.619608, 0.6, 0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.301961, 0.627451, 0.215686, 0.403922, 0.807843, 0.294118, 0.627451, 0.901961, 0.458824, 0.819608, 0.92549, 0.615686, 0.913725, 0.94902, 0.752941, 0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.0235294, 0.207843, 0.67451, 0.0784314, 0.427451, 0.882353, 0.231373, 0.615686, 0.909804, 0.407843, 0.760784, 0.909804, 0.356863, 0.831373, 0.901961, 0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.729412, 0.419608, 1, 0.823529, 0.505882, 1, 0.823529, 0.709804, 0.890196, 0.898039, 0.784314, 0.917647, 0.894118, 0.827451, 0.890196, 0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.552941, 0.780392, 0.478431, 0.662745, 0.843137, 0.517647, 0.815686, 0.882353, 0.639216, 0.886275, 0.933333, 0.647059, 0.956863, 0.968627, 0.709804, 0, 0, 0, 0.101961, 0.0705882, 0.129412, 0.133333, 0.12549, 0.203922, 0.466667, 0.556863, 0.894118, 0.498039, 0.67451, 0.960784, 0.592157, 0.839216, 1, 0.721569, 0.886275, 1, 0.8, 0.960784, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/row = 0
shader_parameter/fps = 0.0
shader_parameter/frame_count = 7
script = ExtResource("2_pblih")
palette = ExtResource("1_s3t2l")
animation_fps = 2
row = 0
metadata/_custom_type_script = "uid://vrs1twpulcy0"

[sub_resource type="AtlasTexture" id="AtlasTexture_q7baa"]
atlas = ExtResource("2_ex2ea")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7gpv"]
atlas = ExtResource("2_ex2ea")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_diiim"]
atlas = ExtResource("3_7pd7f")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooxxu"]
atlas = ExtResource("3_7pd7f")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_unxg0"]
atlas = ExtResource("4_2t7hj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo8mr"]
atlas = ExtResource("4_2t7hj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qlau"]
atlas = ExtResource("5_gfx1a")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nhls"]
atlas = ExtResource("5_gfx1a")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p75ih"]
atlas = ExtResource("6_s3t2l")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5st6d"]
atlas = ExtResource("6_s3t2l")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnmd6"]
atlas = ExtResource("7_pblih")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uo45"]
atlas = ExtResource("7_pblih")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq5yi"]
atlas = ExtResource("8_xk3an")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jmax"]
atlas = ExtResource("8_xk3an")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ooxxu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7baa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7gpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7gpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7baa")
}],
"loop": false,
"name": &"AudioButton",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_diiim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooxxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooxxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diiim")
}],
"loop": false,
"name": &"CenterButton",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unxg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo8mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo8mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unxg0")
}],
"loop": false,
"name": &"LeftButton",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qlau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nhls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nhls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qlau")
}],
"loop": false,
"name": &"OptionsButton",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p75ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5st6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5st6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p75ih")
}],
"loop": false,
"name": &"PetButton",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnmd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uo45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uo45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnmd6")
}],
"loop": false,
"name": &"PowerButton",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq5yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jmax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jmax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq5yi")
}],
"loop": false,
"name": &"RightButton",
"speed": 15.0
}]

[node name="LinkDeviceSprite" type="Sprite2D"]
process_mode = 3
material = SubResource("ShaderMaterial_s3t2l")
texture = ExtResource("1_ex2ea")
offset = Vector2(0, -64)
script = ExtResource("2_7pd7f")
_buttonDownSound = ExtResource("3_2t7hj")
_buttonUpSound = ExtResource("4_gfx1a")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ControlButtons" type="Node2D" parent="."]

[node name="Center" type="AnimatedSprite2D" parent="ControlButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"CenterButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")

[node name="Area2D" type="Area2D" parent="ControlButtons/Center"]
position = Vector2(0, -21)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ControlButtons/Center/Area2D"]
polygon = PackedVector2Array(-21, -7, 21, -7, 21, -3.5, 11, 7, -11, 7, -21, -3)

[node name="Left" type="AnimatedSprite2D" parent="ControlButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"LeftButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")
_assignedButton = 1

[node name="Area2D" type="Area2D" parent="ControlButtons/Left"]
position = Vector2(-36, -60)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ControlButtons/Left/Area2D"]
polygon = PackedVector2Array(-3, -13, 3, -19, 5, -19, 5, 25, 3, 25, -3, 19)

[node name="Right" type="AnimatedSprite2D" parent="ControlButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"RightButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")
_assignedButton = 2

[node name="Area2D" type="Area2D" parent="ControlButtons/Right"]
position = Vector2(33.5, -60)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ControlButtons/Right/Area2D"]
polygon = PackedVector2Array(-2.5, -19, -0.5, -19, 5.5, -13, 5.5, 19, -0.5, 25, -2.5, 25)

[node name="MenuButtons" type="Node2D" parent="."]
process_mode = 3

[node name="Power" type="AnimatedSprite2D" parent="MenuButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"PowerButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")
_assignedButton = 6

[node name="Area2D" type="Area2D" parent="MenuButtons/Power"]
position = Vector2(20, -92)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MenuButtons/Power/Area2D"]
polygon = PackedVector2Array(4, -5, 8, -2, 8, 1, 1.5, 1, -5, 1, -5, -5)

[node name="Options" type="AnimatedSprite2D" parent="MenuButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"OptionsButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")
_assignedButton = 5

[node name="Area2D" type="Area2D" parent="MenuButtons/Options"]
position = Vector2(6, -92)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MenuButtons/Options/Area2D"]
polygon = PackedVector2Array(7, -5, 7, -2, 7, 1, 1.5, 1, -5, 1, -5, -5)

[node name="Pet" type="AnimatedSprite2D" parent="MenuButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"PetButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")
_assignedButton = 4

[node name="Area2D" type="Area2D" parent="MenuButtons/Pet"]
position = Vector2(-8, -92)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MenuButtons/Pet/Area2D"]
polygon = PackedVector2Array(7, -5, 7, -2, 7, 1, 1.5, 1, -5, 1, -5, -5)

[node name="Audio" type="AnimatedSprite2D" parent="MenuButtons"]
sprite_frames = SubResource("SpriteFrames_ooxxu")
animation = &"AudioButton"
offset = Vector2(0, -64)
script = ExtResource("9_oq8df")
_assignedButton = 3

[node name="Area2D" type="Area2D" parent="MenuButtons/Audio"]
position = Vector2(-22, -92)
collision_layer = 2147483648
collision_mask = 2147483648
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MenuButtons/Audio/Area2D"]
polygon = PackedVector2Array(7, -5, 7, -2, 7, 1, -6, 1, -6, -2, -2, -5)

[connection signal="DeviceButtonPressed" from="ControlButtons/Center" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="ControlButtons/Center/Area2D" to="ControlButtons/Center" method="_mouseEntered"]
[connection signal="mouse_exited" from="ControlButtons/Center/Area2D" to="ControlButtons/Center" method="_mouseExited"]
[connection signal="DeviceButtonPressed" from="ControlButtons/Left" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="ControlButtons/Left/Area2D" to="ControlButtons/Left" method="_mouseEntered"]
[connection signal="mouse_exited" from="ControlButtons/Left/Area2D" to="ControlButtons/Left" method="_mouseExited"]
[connection signal="DeviceButtonPressed" from="ControlButtons/Right" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="ControlButtons/Right/Area2D" to="ControlButtons/Right" method="_mouseEntered"]
[connection signal="mouse_exited" from="ControlButtons/Right/Area2D" to="ControlButtons/Right" method="_mouseExited"]
[connection signal="DeviceButtonPressed" from="MenuButtons/Power" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="MenuButtons/Power/Area2D" to="MenuButtons/Power" method="_mouseEntered"]
[connection signal="mouse_exited" from="MenuButtons/Power/Area2D" to="MenuButtons/Power" method="_mouseExited"]
[connection signal="DeviceButtonPressed" from="MenuButtons/Options" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="MenuButtons/Options/Area2D" to="MenuButtons/Options" method="_mouseEntered"]
[connection signal="mouse_exited" from="MenuButtons/Options/Area2D" to="MenuButtons/Options" method="_mouseExited"]
[connection signal="DeviceButtonPressed" from="MenuButtons/Pet" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="MenuButtons/Pet/Area2D" to="MenuButtons/Pet" method="_mouseEntered"]
[connection signal="mouse_exited" from="MenuButtons/Pet/Area2D" to="MenuButtons/Pet" method="_mouseExited"]
[connection signal="DeviceButtonPressed" from="MenuButtons/Audio" to="." method="_deviceButtonPressed"]
[connection signal="mouse_entered" from="MenuButtons/Audio/Area2D" to="MenuButtons/Audio" method="_mouseEntered"]
[connection signal="mouse_exited" from="MenuButtons/Audio/Area2D" to="MenuButtons/Audio" method="_mouseExited"]
